<resources>
    <string name="app_name">ITBook</string>
    <string name="title_home">Home</string>
    <string name="title_favorite_books">Favorite Books</string>
    <string name="title_settings">Settings</string>
    <string name="title_category_name">Category</string>
    <string name="title_book">Title</string>
    <string name="title_subtitle_book">Subtitle</string>
    <string name="title_subtitle_authors">Authors</string>
    <string name="title_similar_book">Similar Book</string>
    <string name="title_information_book">Information</string>
    <string name="title_description_book">Description</string>
    <string name="title_link_book">Link to by this book</string>
    <string name="title_app_owner">Made by:</string>
    <string name="title_version">Version:</string>
    <string name="title_contact">Contact:</string>
    <string name="title_app_language">Language</string>
    <string name="title_app_information">App Information</string>

    <string name="text_title_welcome">Are you ready to read?</string>
    <string name="text_content_welcome">Let\'s choose a book which you like.</string>
    <string name="text_content_description_book">content of description</string>
    <string name="text_content_link_book" translatable="false">https://itbook.store</string>
    <string name="text_rating_book">rating</string>
    <string name="text_publisher_book">publisher</string>
    <string name="text_language_book">language</string>
    <string name="text_pages_book">papers</string>
    <string name="text_year_book">year</string>
    <string name="text_isbn10_book" translatable="false">isbn10</string>
    <string name="text_isbn13_book" translatable="false">isbn13</string>
    <string name="text_favorite_books">Your Favorite Books</string>
    <string name="text_default_books_count">books.</string>
    <string name="text_search_result">search result</string>
    <string name="text_language_en" translatable="false">En</string>
    <string name="text_language_vi" translatable="false">Vi</string>
    <string name="text_dev" translatable="false">Nguyen Huu Nam</string>
    <string name="text_facebook" translatable="false">https://www.facebook.com/zGararz</string>
    <string name="text_internet_on">Internet is connected!</string>
    <string name="text_internet_off">Internet is not connected!</string>

    <string name="error_internet_not_connection">Check your internet connection!</string>
    <string name="error_search">can\'t search</string>
    <string name="error_load_data">can\'t load books</string>

    <string name="category_new" translatable="false">New</string>
    <string name="category_basic" translatable="false">Basic</string>
    <string name="category_.net_framework" translatable="false">.NET Framework</string>
    <string name="category_design" translatable="false">Design</string>
    <string name="category_programing" translatable="false">Programing</string>
    <string name="category_business" translatable="false">Business</string>
    <string name="category_software" translatable="false">Software</string>
    <string name="category_sql" translatable="false">SQL</string>
    <string name="category_microsoft_access" translatable="false">Microsoft Access</string>
    <string name="category_microsoft_office" translatable="false">Microsoft Office</string>
    <string name="category_database" translatable="false">Database</string>
    <string name="category_big_data" translatable="false">Big Data</string>
    <string name="category_for_dummies" translatable="false">For Dummies</string>
    <string name="category_html" translatable="false">HTML</string>
    <string name="category_android" translatable="false">Android</string>
    <string name="category_ios" translatable="false">IOS</string>
    <string name="category_linux" translatable="false">Linux</string>

    <string-array name="categories">
        <item>@string/category_programing</item>
        <item>@string/category_software</item>
        <item>@string/category_sql</item>
        <item>@string/category_database</item>
        <item>@string/category_big_data</item>
        <item>@string/category_for_dummies</item>
        <item>@string/category_html</item>
        <item>@string/category_android</item>
        <item>@string/category_ios</item>
        <item>@string/category_linux</item>
        <item>@string/category_business</item>
        <item>@string/category_basic</item>
        <item>@string/category_.net_framework</item>
        <item>@string/category_design</item>
        <item>@string/category_new</item>
    </string-array>
</resources>
