<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageLanguage"
        android:layout_width="@dimen/dp_30"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_language" />

    <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/title_app_language"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageLanguage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageInfo"
        android:layout_width="@dimen/dp_30"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLanguage"
        app:srcCompat="@drawable/ic_info" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_50"
        app:layout_constraintBottom_toBottomOf="@+id/textLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:thumbTint="@color/color_mine_shaft" />

    <TextView
        android:id="@+id/textAppInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/title_app_information"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageInfo"
        app:layout_constraintTop_toBottomOf="@id/textLanguage" />

    <TextView
        android:id="@+id/textLanguageEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_37"
        android:text="@string/text_language_en"
        app:layout_constraintEnd_toStartOf="@+id/switchLanguage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLanguageVi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_37"
        android:text="@string/text_language_vi"
        app:layout_constraintStart_toEndOf="@+id/switchLanguage"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
