<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageBackAppInfo"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_25"
        android:layout_marginVertical="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_10"
        android:src="@drawable/ic_back"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitleDetailCategory"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/title_app_information"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageBackAppInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitleOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/title_app_owner"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleDetailCategory"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/text_dev"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textTitleOwner"
        app:layout_constraintTop_toBottomOf="@+id/textTitleDetailCategory" />

    <TextView
        android:id="@+id/textTitleVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/title_version"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleOwner"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textTitleVersion"
        app:layout_constraintTop_toBottomOf="@+id/textTitleOwner" />

    <TextView
        android:id="@+id/textTitleContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/title_contact"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVersion"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textTitleContact"
        app:layout_constraintTop_toBottomOf="@+id/textVersion" />
</androidx.constraintlayout.widget.ConstraintLayout>
