<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBackDetailBook"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageShareDetailBook"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageFavoriteDetailBook"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_15"
            android:src="@drawable/ic_un_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/imageShareDetailBook"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageSearchDetailBook"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_15"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/imageFavoriteDetailBook"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="#EEEEEE"
                    android:src="@drawable/book"
                    app:layout_constraintDimensionRatio="6:7"
                    app:layout_constraintEnd_toStartOf="@+id/textTitleDetailBook"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.35" />

                <TextView
                    android:id="@+id/textTitleDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:text="@string/title_book"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageDetailBook"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textAuthorDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:text="@string/title_subtitle_authors"
                    android:textColor="@color/color_azure_blue_ribbon"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageDetailBook"
                    app:layout_constraintTop_toBottomOf="@+id/textTitleDetailBook" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

                <TextView
                    android:id="@+id/textTitleInfoDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="@string/title_information_book"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginVertical="@dimen/dp_3"
                    android:background="@color/color_mine_shaft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleInfoDetailBook" />

                <TextView
                    android:id="@+id/textTitleRatingDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_rating_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line"
                    app:layout_constraintWidth_percent="0.3" />

                <ImageView
                    android:id="@+id/imageRatingDetailBook"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/dp_3"
                    android:src="@drawable/ic_0_star"
                    app:layout_constraintBottom_toBottomOf="@id/textTitleRatingDetailBook"
                    app:layout_constraintStart_toEndOf="@id/textTitleRatingDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/line" />

                <TextView
                    android:id="@+id/textTitlePublisherDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_publisher_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleRatingDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textPublisherDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitlePublisherDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/imageRatingDetailBook" />

                <TextView
                    android:id="@+id/textTitleLanguageDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_language_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitlePublisherDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textLanguageDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleLanguageDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textPublisherDetailBook" />

                <TextView
                    android:id="@+id/textTitlePapersDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_pages_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleLanguageDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textPapersDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitlePapersDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textLanguageDetailBook" />

                <TextView
                    android:id="@+id/textTitleYearDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_year_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitlePapersDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textYearDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleYearDetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textPapersDetailBook" />

                <TextView
                    android:id="@+id/textTitleIsbn10DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_isbn10_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleYearDetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textIsbn10DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleIsbn10DetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textYearDetailBook" />

                <TextView
                    android:id="@+id/textTitleIsbn13DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_isbn13_book"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleIsbn10DetailBook"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/textIsbn13DetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textTitleIsbn13DetailBook"
                    app:layout_constraintTop_toBottomOf="@id/textIsbn10DetailBook" />

                <TextView
                    android:id="@+id/textTitleDescDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/title_description_book"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleIsbn13DetailBook" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginVertical="@dimen/dp_3"
                    android:background="@color/color_mine_shaft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleDescDetailBook" />

                <TextView
                    android:id="@+id/textDescDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_content_description_book"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line2" />

                <TextView
                    android:id="@+id/textTitleLinkDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/title_link_book"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textDescDetailBook" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginVertical="@dimen/dp_3"
                    android:background="@color/color_mine_shaft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTitleLinkDetailBook" />

                <TextView
                    android:id="@+id/textLinkDetailBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:text="@string/text_content_link_book"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line3" />

                <include
                    android:id="@+id/layoutPreviewCategory"
                    layout="@layout/preview_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLinkDetailBook" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
